--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.76.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "4.18.2",
-    "morgan": "^1.10.0",
-    "pg": "^8.14.1"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
